fix: Forbidden double-click to change scale and make page unselectable on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,10 @@
 body {
     text-align: center;
     font: sans-serif;
-    user-select: none;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 
 .top-bar {
